# QBFToys

./: .gitignore  Qdimacs.hs  README.md  TODO  TODO.md  Thf.hs  converter.hs  converter_old.hs  generateBenchmarks.py  preprocessors.csv  runBenchmarks.py  scheduler.py  test.qdimacs
PreprocessingTechniques/: doc.tex
converter/: Qdimacs.hs  Thf.hs  converter.cabal
dqbfTool/: blub.thf  dqbfTool.cabal  stack.yaml
dqbfTool/src/: DQBF.hs  DQBF2THF.hs  DQBFParser.hs  Main.hs  THFboolean.hs  THFdqbf.hs
dqbfTool/test/: DQBFParserSpec.hs
dqbfTool/testcases/: minimal.dqbf  pec_multiplexer_1_76.dqbf
etc/test_qdimacs/: aim-200-3_4-yes1-1-90-shuffled.qdimacs  eijk.S208o.S-d4-shuffled.qdimacs
qbfTool/: Main.hs  Qdimacs.hs  SMTLib.hs  qbfTool.cabal
scripts/: run_bench.sh  solvers.csv  submit.sh
scripts/automaticBenchmarks/: generateBenchmarks.py  scheduler.py
test_qdimacs/: test.qdimacs  toilet_c_02_01.2-shuffled.qdimacs  toilet_g_02_01.2-shuffled.qdimacs
