name: dqbfTool
version: 0.1.0.0
license-file: LICENSE
author: Hans-Jörg Schurr
maintainer: hans-joerg@schurr.at
build-type: Simple
cabal-version: >=1.10

executable dqbfTool
  main-is: Main.hs
  build-depends: base >=4.6
  hs-source-dirs: src
  default-language: Haskell2010

-- Test setup like:
-- https://github.com/kazu-yamamoto/unit-test-example/blob/master/markdown/en/tutorial.md
Test-Suite doctest
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  HS-Source-Dirs: test
  Ghc-Options: -threaded -Wall
  Main-Is: doctests.hs
  Build-Depends: base, doctest >= 0.9.3

Test-Suite spec
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs: test
  Ghc-Options: -Wall
  Main-Is: spec.hs
  Build-Depends:
    base
    ,hspec >= 1.3
    ,QuickCheck
