name: dqbfTool
version: 0.1.0.0
license-file: LICENSE
author: Hans-Joerg Schurr
maintainer: commits@schurr.at
build-type: Simple
cabal-version: >=1.10

--executable dqbfTool
library
  exposed-modules: DQBF, DQBFParser, THFdqbf, DQBF2THF
--  main-is: Main.hs
  build-depends: base >=4.6, parsec>=3.1, hspec >= 1.3, bytestring >= 0.10, containers >= 0.5
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: UnicodeSyntax

executable dqbfTool
  main-is: Main.hs
  other-modules: DQBF, DQBFParser, THFdqbf, DQBF2THF
  -- other-extensions:
  build-depends: base >=4.6, parsec>=3.1, hspec >= 1.3, bytestring >= 0.10, containers >= 0.5
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: UnicodeSyntax

-- Test setup like:
-- https://github.com/kazu-yamamoto/unit-test-example/blob/master/markdown/en/tutorial.md
Test-Suite doctest
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  HS-Source-Dirs: test
  Ghc-Options: -threaded -Wall
  Main-Is: doctests.hs
  Build-Depends: base, doctest >= 0.9.3

Test-Suite spec
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs: test
  Ghc-Options: -Wall
  Main-Is: spec.hs
  Build-Depends:
    base,
    hspec >= 1.3,
    parsec >= 3.1,
    QuickCheck,
    dqbfTool
